// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-statement-and-regexp.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a : { b : 1 }/2/;

=====================================output=====================================
a: {
  b: 1;
}
/2/;

================================================================================
`;

exports[`comment.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  inf_leave: // goto emulation
  for (;;) {}
}
{
  inf_leave:
  // goto emulation
  for (; ;) { }
}

=====================================output=====================================
{
  // goto emulation
  inf_leave: for (;;) {}
}
{
  // goto emulation
  inf_leave: for (;;) {}
}

================================================================================
`;

exports[`empty_label.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a:;
b

=====================================output=====================================
a:;
b;

================================================================================
`;
